--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   </header>
   <main class="md:container lg:max-w-screen-xl mx-auto">
-    <section class="grid md:grid-cols-2 lg:grid-cols-3 md:px-8 lg:px-5  px-12 space-y-4 my-24  justify-items-center">
+    <section class="grid md:grid-cols-2 lg:grid-cols-3 md:px-8 lg:px-5  px-12 space-y-4 my-24 pr-5  justify-items-center">
       <div class="card bg-base-100 w-96 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/business.png" alt="Shoes" class="rounded-xl" />
