--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
 
   </header>
-  <main class="md:container lg:max-w-screen-xl mx-auto">
-    <section class="grid md:grid-cols-2 lg:grid-cols-3 md:px-8 lg:px-5  px-12 space-y-4 my-24  items-center  justify-items-center">
+  <main class="md:container lg:max-w-screen-xl  mx-auto">
+    <section class="grid md:grid-cols-2 lg:grid-cols-3 md:px-8 lg:px-5  px-12 space-y-4 my-24    justify-items-center">
       <div class="card bg-base-100 w-96 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/business.png" alt="Shoes" class="rounded-xl" />
@@ -424,7 +424,11 @@
         </label>
         <div class="join">
           <input type="text" placeholder="username@site.com" class="input input-bordered join-item" />
-          <button class="bg-[#B68C5A] px-4 rounded-lg">Subscribe</button>
+      
+          <button type="submit">
+            <span class="fa-solid fa-envelope bg-[#B68C5A] py=5 px-7 p-4 rounded-lg" aria-hidden="true"></span> 
+          </button>
+          
         </div>
       </fieldset>
     </form>
