added a new file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </p>
 
             <input class="py-3 px-6 rounded-lg" type="text" placeholder="Search your services">
-            <button class="bg-[#B68C5A]   text-white py-3 px-6 rounded-lg mb-20">Search</button>
+            <button class="bg-[#B68C5A] mt-4  text-white py-3 px-6 rounded-lg mb-20">Search</button>
 
           </div>
         </div>
@@ -408,7 +408,7 @@
     </div>
     <nav class="gap-5">
       <h6 class="footer-title">Contact Now</h6>
-      <a class="link link-hover mb-4">555 4th 5t NW, Washington <br>
+      <a class="link link-hover  mb-4">555 4th 5t NW, Washington <br>
         DC 20530, United States</a><br><br>
       <a class="link link-hover mb-4">+88 01750 000 000 <br>
         +88 01750 000 000</a><br><br>
