added a new file

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <i class="fa-solid fa-arrow-right bg-[#B68C5A] rounded-full py-2 px-2 "></i>
         </div>
       </div>
-      <div class="card bg-base-100 w-80 shadow-xl">
+      <div class="card bg-base-100 w-80 mx-10-10 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/criminal.png" alt="Shoes" class="rounded-xl" />
         </figure>
@@ -109,7 +109,7 @@
           <i class="fa-solid fa-arrow-right bg-[#B68C5A] rounded-full py-2 px-2 "></i>
         </div>
       </div>
-      <div class="card bg-base-100 w-80 shadow-xl">
+      <div class="card bg-base-100 w-80 mx-10 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/child.png" alt="Shoes" class="rounded-xl" />
         </figure>
@@ -120,7 +120,7 @@
           <i class="fa-solid fa-arrow-right bg-[#B68C5A] rounded-full py-2 px-2 "></i>
         </div>
       </div>
-      <div class="card bg-base-100 w-80 shadow-xl">
+      <div class="card bg-base-100 w-80 mx-10 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/education.png" alt="Shoes" class="rounded-xl" />
         </figure>
@@ -131,7 +131,7 @@
           <i class="fa-solid fa-arrow-right bg-[#B68C5A] rounded-full py-2 px-2 "></i>
         </div>
       </div>
-      <div class="card bg-base-100 w-80 shadow-xl">
+      <div class="card bg-base-100 w-80 mx-10 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/divorce.png" alt="Shoes" class="rounded-xl" />
         </figure>
@@ -142,7 +142,7 @@
           <i class="fa-solid fa-arrow-right bg-[#B68C5A] rounded-full py-2 px-2 "></i>
         </div>
       </div>
-      <div class="card bg-base-100 w-80 shadow-xl">
+      <div class="card bg-base-100 w-80 mx-10 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/tax.png" alt="Shoes" class="rounded-xl" />
         </figure>
@@ -388,15 +388,15 @@
       </div>
     </section>
   </main>
-  <footer class=" bg-[#111111] gap-5 text-white grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  p-10">
-    <nav>
+  <footer class=" bg-[#111111] gap-5 text-white grid grid-cols-1  md:grid-cols-2 lg:grid-cols-4  p-10">
+    <nav class="ml-10">
       <div>
         <img src="images/logo.png" alt="">
       </div>
       <p>There are many variations of <br> passages of Lorem Ipsum <br> available, but the majority have <br> suffered
         alteration in some form, <br> by injected humour.</p>
-    </nav>
-    <div>
+    </nav >
+    <div class="ml-10">
       <h6 class="footer-title">Usefull Link</h6>
       <ul>
         <li><a class="">Homes</a></li>
@@ -406,7 +406,7 @@
         <li> <a class=""> Contact Us</a></li>
       </ul>
     </div>
-    <nav class="gap-5">
+    <nav class="gap-5 ml-10">
       <h6 class="footer-title">Contact Now</h6>
       <a class="link link-hover  mb-4">555 4th 5t NW, Washington <br>
         DC 20530, United States</a><br><br>
@@ -415,7 +415,7 @@
       <a class="link link-hover">info@gmail.com <br>
         info@gmail.com</a>
     </nav>
-    <form>
+    <form class="ml-10">
       <h6 class="footer-title">Subscribe</h6>
       <p>Subscribe for our latest & Articles. <br> We Won’t Give You Spam Mails</p>
       <fieldset class="form-control w-80">
@@ -423,7 +423,7 @@
           <span class="label-text text-white">Enter your email address</span>
         </label>
         <div class="join">
-          <input type="text" placeholder="username@site.com" class="input input-bordered join-item" />
+          <input type="text" placeholder="username@site.com" class="input rounded-lg input-bordered join-item" />
           <button><i class="fa-solid fa-paper-plane py-4 px-6 rounded-lg bg-[#B68C5A]"></i></button>
          
           
