added a new cool

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           <input type="text" placeholder="Your Email" class="bg-[#F3F3F3] py-3 w-full px-10 mb-4 rounded-lg"> <br>
           <input type="text" placeholder="Subject" class="bg-[#F3F3F3] py-3 w-full px-10 mb-4 rounded-lg"><br> <br>
           <textarea name="" id="" cols="30" rows="10" placeholder=" Your Message"
-            class="bg-[#F3F3F3] py-3 px-10 mb-4"></textarea><br>
+            class="bg-[#F3F3F3] py-3 px-10 w-full mb-4"></textarea><br>
           <input type="submit" value="Send Message " class="bg-[#B68C5A] w-full text-white rounded-lg py-3 px-10 mb-4 max-w-80">
         </div>
       </div>
