--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <section class="container lg:max-w-screen-xl mx-auto">
-      <div class="hero min-h-screen sm:container p-10" style="background-image: url(images/banner.png) ;">
+      <div class="hero min-h-screen sm:container sm:mx-8 p-10" style="background-image: url(images/banner.png) ;">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-neutral-content text-center">
           <div class="max-w-md">
@@ -86,19 +86,20 @@
 
   </header>
   <main class="md:container lg:max-w-screen-xl  mx-auto">
-    <section class="grid md:grid-cols-2 lg:grid-cols-3 md:px-8 lg:px-5  px-12 space-y-4 my-24    justify-items-center">
+    <section class="grid md:grid-cols-2 lg:grid-cols-3 md:px-8 lg:px-5  space-y-4 my-24 text-center   justify-items-center">
       <div class="card bg-base-100 w-80 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/business.png" alt="Shoes" class="rounded-xl" />
         </figure>
-        <div class="card-body items-center text-center">
+        <div class="card-body items-center  text-center">
           <h2 class="card-title  font-bold ">Business Law</h2>
           <p class="text-base text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the
             majority have suffered alteration in some form, by injected humour.</p>
           <i class="fa-solid fa-arrow-right bg-[#B68C5A] rounded-full py-2 px-2 "></i>
         </div>
       </div>
-      <div class="card bg-base-100 w-80 mx-10-10 shadow-xl">
+    
+      <div class="card bg-base-100 w-80 mx-10  shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/criminal.png" alt="Shoes" class="rounded-xl" />
         </figure>
@@ -153,6 +154,7 @@
           <i class="fa-solid fa-arrow-right bg-[#B68C5A] rounded-full py-2 px-2 "></i>
         </div>
       </div>
+  
 
     </section>
     <!-- our section -->
@@ -389,14 +391,14 @@
     </section>
   </main>
   <footer class=" bg-[#111111] gap-5 text-white grid grid-cols-1  md:grid-cols-2 lg:grid-cols-4  p-10">
-    <nav class="ml-10">
+    <nav class="ml-5">
       <div>
         <img src="images/logo.png" alt="">
       </div>
       <p>There are many variations of <br> passages of Lorem Ipsum <br> available, but the majority have <br> suffered
         alteration in some form, <br> by injected humour.</p>
     </nav >
-    <div class="ml-10">
+    <div class="ml-5">
       <h6 class="footer-title">Usefull Link</h6>
       <ul>
         <li><a class="">Homes</a></li>
@@ -406,7 +408,7 @@
         <li> <a class=""> Contact Us</a></li>
       </ul>
     </div>
-    <nav class="gap-5 ml-10">
+    <nav class="gap-5 ml-5">
       <h6 class="footer-title">Contact Now</h6>
       <a class="link link-hover  mb-4">555 4th 5t NW, Washington <br>
         DC 20530, United States</a><br><br>
@@ -415,7 +417,7 @@
       <a class="link link-hover">info@gmail.com <br>
         info@gmail.com</a>
     </nav>
-    <form class="ml-10">
+    <form class="ml-5">
       <h6 class="footer-title">Subscribe</h6>
       <p>Subscribe for our latest & Articles. <br> We Won’t Give You Spam Mails</p>
       <fieldset class="form-control w-80">
