added a new section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <section class="container lg:max-w-screen-xl mx-auto">
-      <div class="hero min-h-screen sm:container sm:mx-8 p-10" style="background-image: url(images/banner.png) ;">
+      <div class="hero min-h-screen sm:container  sm:mx-8 " style="background-image: url(images/banner.png) ;">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-neutral-content text-center">
           <div class="max-w-md">
@@ -165,7 +165,7 @@
       <!-- carousel -->
       <div class="carousel w-full">
         <div id="slide1" class="carousel-item relative w-full">
-          <div class="hero min-h-screen" style="background-image: url(images/banner.png);">
+          <div class="hero min-h-screen" style="background-image: url(images/banner.png),linear-gradient(180.00deg, rgb(17, 17, 17),rgba(17, 17, 17, 0) 100%);">
             <div>
               <div class="avatar">
                 <div class="w-24 rounded-full">
