aded a new topic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="eb-garamond-font">
   <header>
-    <nav class="">
+    <nav class="max-w-7xl mx-auto">
       <div class="navbar justify-around  bg-base-100">
         <div class="">
           <div class="dropdown">
@@ -64,8 +64,8 @@
         </div>
       </div>
     </nav>
-    <section class="container lg:max-w-screen-xl mx-auto">
-      <div class="hero min-h-screen sm:container  sm:mx-8 " style="background-image: url(images/banner.png) ;">
+    <section class="max-w-7xl mx-auto px-7">
+      <div class="hero min-h-screen   max-w-6xl mx-auto rounded-xl  " style="background-image: url(images/banner.png) ;">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-neutral-content text-center">
           <div class="max-w-md">
@@ -86,7 +86,7 @@
 
   </header>
   <main class="md:container lg:max-w-screen-xl  mx-auto">
-    <section class="grid md:grid-cols-2 lg:grid-cols-3 md:px-8 lg:px-5  space-y-4 my-24 text-center   justify-items-center">
+    <section class="grid md:grid-cols-2 lg:grid-cols-3  px-5 space-y-4 my-24 flex-1  space-x-1   justify-items-center">
       <div class="card bg-base-100 w-80 shadow-xl">
         <figure class="px-10 pt-10">
           <img src="images/business.png" alt="Shoes" class="rounded-xl" />
@@ -158,19 +158,20 @@
 
     </section>
     <!-- our section -->
-    <section class="my-24 text-center gap-4 p-10">
+    <section class="my-24 max-w-7xl mx-auto px-7 text-center ">
       <h1 class="text-5xl  font-bold"> What Our Client Say</h1>
       <p class="text-base py-4 text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the
         majority have <br> suffered alteration in some form, by injected humour.</p>
       <!-- carousel -->
       <div class="carousel w-full">
-        <div id="slide1" class="carousel-item relative w-full">
-          <div class="hero min-h-screen" style="background-image: url(images/banner.png),linear-gradient(180.00deg, rgb(17, 17, 17),rgba(17, 17, 17, 0) 100%);">
+        <div id="slide1" class="carousel-item space-y-5 relative w-full">
+          <div class="hero min-h-screen bg-no-repeat bg-center ..." style="background-image: url(images/banner.png),linear-gradient(180.00deg, rgb(17, 17, 17),rgba(17, 17, 17, 0) 100%);">
+            <!-- <div class=" hero bg-no-repeat bg-center ..." style="background-image: url(images/banner.png);"> -->
             <div>
               <div class="avatar">
                 <div class="w-24 rounded-full">
                   <img src="images/user-1.png" />
-                </div>
+                </div>ø
 
               </div>
               <h1 class="text-white text-2xl">Awlad Hossain</h1>
@@ -183,8 +184,8 @@
             </div>
           </div>
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-            <a href="#slide4" class="btn btn-circle">❮</a>
-            <a href="#slide2" class="btn btn-circle">❯</a>
+            <a href="#slide4" class="btn btn-circle bg-none">❮</a>
+            <a href="#slide2" class="btn btn-circle bg-none">❯</a>
           </div>
         </div>
         <div id="slide2" class="carousel-item relative w-full">
@@ -260,11 +261,11 @@
       </div>
     </section>
     <!-- section-3 -->
-    <section class="my-24 text-center ">
+    <section class="my-24 text-center max-w-7xl mx-auto px-7 ">
       <h1 class="text-5xl font-bold my-4 ">Frequently Asked Any Questions</h1>
       <p class="text-base font-bold my-4">There are many variations of passages of Lorem Ipsum available, but the
         majority have <br> suffered alteration in some form, by injected humour.</p>
-      <div class="grid md:grid-cols-1 gap-5 lg:grid-cols-2">
+      <div class="grid md:grid-cols-1 gap-8 lg:grid-cols-2">
         <!-- text section -->
         <div>
           <div class="collapse collapse-plus bg-base-200 my-6 ">
@@ -317,20 +318,20 @@
           </div>
         </div>
         <!-- img section -->
-        <div class="my-6">
+        <div class="my-6 ">
           <img src="images/faq.png" alt="">
         </div>
       </div>
     </section>
     <!-- section-3 -->
-    <section class="text-center  my-24 justify-items-center items-center">
+    <section class="text-center max-w-7xl mx-auto px-10  my-24 justify-items-center items-center">
       <h1 class="text-5xl font-bold">Contact With Us</h1>
       <p class="text-base py-4 textrebg-red-700">There are many variations of passages of Lorem Ipsum available, but the
         majority have <br> suffered alteration in some form, by injected humour.</p>
       <div class="lg:flex  gap-6">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-3 text-center ">
+        <div class="grid grid-cols-1 gap-5 md:grid-cols-2 flex-1 text-center ">
           <!-- card-1 -->
-          <div class="card bg-base-100 w-80 shadow-xl">
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure class="px-10 pt-10">
               <img src="images/location.png" alt="Shoes" class="rounded-xl" />
             </figure>
@@ -342,7 +343,7 @@
             </div>
           </div>
           <!-- card-1 -->
-          <div class="card bg-base-100 w-80 shadow-xl">
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure class="px-10 pt-10">
               <img src="images/call.png" alt="Shoes" class="rounded-xl" />
             </figure>
@@ -353,7 +354,7 @@
 
             </div>
           </div>
-          <div class="card bg-base-100 w-80 shadow-xl">
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure class="px-10 pt-10">
               <img src="images/email.png" alt="Shoes" class="rounded-xl" />
             </figure>
@@ -364,7 +365,7 @@
 
             </div>
           </div>
-          <div class="card bg-base-100 w-80 shadow-xl">
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure class="px-10 pt-10">
               <img src="images/time.png" alt="Shoes" class="rounded-xl" />
             </figure>
@@ -378,9 +379,9 @@
 
 
         </div>
-        <div class="gap-6 mt-5">
+        <div class="gap-6 mt-5 ">
           <!-- form-->
-          <input type="text" placeholder="Your Name" class="bg-[#F3F3F3] w-full py-3 px-10 mb-4 rounded-lg"><br>
+          <input type="text" placeholder="Your Name" class="bg-[#F3F3F3] w-96 py-3 px-10 mb-4 rounded-lg"><br>
           <input type="text" placeholder="Your Email" class="bg-[#F3F3F3] py-3 w-full px-10 mb-4 rounded-lg"> <br>
           <input type="text" placeholder="Subject" class="bg-[#F3F3F3] py-3 w-full px-10 mb-4 rounded-lg"><br> <br>
           <textarea name="" id="" cols="30" rows="10" placeholder=" Your Message"
@@ -390,7 +391,8 @@
       </div>
     </section>
   </main>
-  <footer class=" bg-[#111111] gap-5 text-white grid grid-cols-1  md:grid-cols-2 lg:grid-cols-4  p-10">
+  <footer class=" bg-[#111111]   p-10">
+   <section class=" gap-5 text-white grid grid-cols-1  md:grid-cols-2 lg:grid-cols-4 max-w-7xl mx-auto">
     <nav class="ml-5">
       <div>
         <img src="images/logo.png" alt="">
@@ -425,13 +427,14 @@
           <span class="label-text text-white">Enter your email address</span>
         </label>
         <div class="join">
-          <input type="text" placeholder="username@site.com" class="input rounded-lg input-bordered join-item" />
-          <button><i class="fa-solid fa-paper-plane py-4 px-6 rounded-lg bg-[#B68C5A]"></i></button>
+          <input type="text" placeholder="username@site.com  " class="input  input-bordered join-item"  />
+          <button><i class="fa-solid fa-paper-plane py-4 px-6  rounded-r-lg  bg-[#B68C5A]"></i></button>
          
           
         </div>
       </fieldset>
     </form>
+   </section>
   </footer>
 </body>
 
