--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="hero min-h-screen   max-w-6xl mx-auto rounded-xl  " style="background-image: url(images/banner.png) ;">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-neutral-content text-center">
-          <div class="max-w-md">
+          <div class="max-w-md px-5">
             <h1 class="mb-5 text-5xl font-bold">We Provide Effective Legal Solutions</h1>
             <p class="mb-5">
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
@@ -160,7 +160,7 @@
     <!-- our section -->
     <section class="my-24 max-w-7xl mx-auto px-7 text-center ">
       <h1 class="text-5xl  font-bold"> What Our Client Say</h1>
-      <p class="text-base py-4 text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the
+      <p class="text-base py-4 text-[#707070] font-semibold">There are many variations of passages of Lorem Ipsum available, but the
         majority have <br> suffered alteration in some form, by injected humour.</p>
       <!-- carousel -->
       <div class="carousel w-full">
@@ -326,10 +326,10 @@
     <!-- section-3 -->
     <section class="text-center max-w-7xl mx-auto px-10  my-24 justify-items-center items-center">
       <h1 class="text-5xl font-bold">Contact With Us</h1>
-      <p class="text-base py-4 textrebg-red-700">There are many variations of passages of Lorem Ipsum available, but the
+      <p class="text-base py-4 textrebg-red-700 font-semibold">There are many variations of passages of Lorem Ipsum available, but the
         majority have <br> suffered alteration in some form, by injected humour.</p>
       <div class="lg:flex  gap-6">
-        <div class="grid grid-cols-1 gap-5 md:grid-cols-2 flex-1 text-center ">
+        <div class="grid grid-cols-1 gap-5 md:space-x-2 md:grid-cols-2 flex-1 text-center ">
           <!-- card-1 -->
           <div class="card bg-base-100 w-96 shadow-xl">
             <figure class="px-10 pt-10">
@@ -381,7 +381,7 @@
         </div>
         <div class="gap-6 mt-5 ">
           <!-- form-->
-          <input type="text" placeholder="Your Name" class="bg-[#F3F3F3] w-96 py-3 px-10 mb-4 rounded-lg"><br>
+          <input type="text" placeholder="Your Name" class="bg-[#F3F3F3] w-full py-3 px-10 mb-4 rounded-lg"><br>
           <input type="text" placeholder="Your Email" class="bg-[#F3F3F3] py-3 w-full px-10 mb-4 rounded-lg"> <br>
           <input type="text" placeholder="Subject" class="bg-[#F3F3F3] py-3 w-full px-10 mb-4 rounded-lg"><br> <br>
           <textarea name="" id="" cols="30" rows="10" placeholder=" Your Message"
@@ -393,14 +393,14 @@
   </main>
   <footer class=" bg-[#111111]   p-10">
    <section class=" gap-5 text-white grid grid-cols-1  md:grid-cols-2 lg:grid-cols-4 max-w-7xl mx-auto">
-    <nav class="ml-5">
+    <nav>
       <div>
         <img src="images/logo.png" alt="">
       </div>
       <p>There are many variations of <br> passages of Lorem Ipsum <br> available, but the majority have <br> suffered
         alteration in some form, <br> by injected humour.</p>
     </nav >
-    <div class="ml-5">
+    <div >
       <h6 class="footer-title">Usefull Link</h6>
       <ul>
         <li><a class="">Homes</a></li>
@@ -410,7 +410,7 @@
         <li> <a class=""> Contact Us</a></li>
       </ul>
     </div>
-    <nav class="gap-5 ml-5">
+    <nav class="gap-5">
       <h6 class="footer-title">Contact Now</h6>
       <a class="link link-hover  mb-4">555 4th 5t NW, Washington <br>
         DC 20530, United States</a><br><br>
@@ -419,7 +419,7 @@
       <a class="link link-hover">info@gmail.com <br>
         info@gmail.com</a>
     </nav>
-    <form class="ml-5">
+    <form >
       <h6 class="footer-title">Subscribe</h6>
       <p>Subscribe for our latest & Articles. <br> We Won’t Give You Spam Mails</p>
       <fieldset class="form-control w-80">
@@ -427,8 +427,8 @@
           <span class="label-text text-white">Enter your email address</span>
         </label>
         <div class="join">
-          <input type="text" placeholder="username@site.com  " class="input  input-bordered join-item"  />
-          <button><i class="fa-solid fa-paper-plane py-4 px-6  rounded-r-lg  bg-[#B68C5A]"></i></button>
+          <input type="text" placeholder="username@site.com" class="input  input-bordered join-item"  />
+          <button><i class="fa-solid fa-paper-plane py-4 px-6  rounded-r-lg   bg-[#B68C5A]"></i></button>
          
           
         </div>
